
   STILL UNDER DEVELOPMENT; NOT RELEASED YET

     * Added atf-sh, an interpreter to process test programs written using
       the shell API. This is not really a shell interpreter by itself
       though: it is just a wrapper around the system shell that eases the
       loading of the necessary ATF libraries.

     * Removed atf-compile in favour of atf-sh.

                             Changes in version 0.8

   Experimental version released on May 7th, 2010.

     * Test programs no longer run several test cases in a row. The execution
       of a test program now requires a test case name, and that single test
       case is executed. To execute several test cases, use the atf-run
       utility as usual.

     * Test programs no longer fork a subprocess to isolate the execution of
       test cases. They run the test case code in-process, and a crash of the
       test case will result in a crash of the test program. This is to ease
       debugging of faulty test cases.

     * Test programs no longer isolate their test cases. This means that they
       will not create temporary directories nor sanitize the environment any
       more. Yes: running a test case that depends on system state by hand
       will most likely yield different results depending on where (machine,
       directory, user environment, etc.) it is run. Isolation has been moved
       to atf-run.

     * Test programs no longer print a cryptic format (application/X-atf-tcs)
       on a special file channel. They can now print whatever they want on
       the screen. Because test programs can now only run one test case every
       time, providing controlled output is not necessary any more.

     * Test programs no longer write their status into a special file
       descriptor. Instead, they create a file with the results, which is
       later parsed by atf-run. This changes the semantics of the -r flag.

     * atf-run has been adjusted to perform the test case isolation. As a